--- a/api/MedicappApi/MedicappApi/appsettings.json
+++ b/api/MedicappApi/MedicappApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConnectionString": "Data Source=NB049470\\SQLEXPRESS;Initial catalog=medicapp-db;Integrated Security=true"
+    "DefaultConnection": "Data Source=NB049470\\SQLEXPRESS;Initial catalog=medicapp-db;Integrated Security=true"
   },
   "Logging": {
     "LogLevel": {
