--- a/api/MedicappApi/MedicappApi/appsettings.json
+++ b/api/MedicappApi/MedicappApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=NB049470\\SQLEXPRESS;Initial catalog=medicapp-db;Integrated Security=true"
+    "DefaultConnection": "Data Source=127.0.0.1;Initial catalog=medicapp-db;User ID=sa;Password=MyPass@word;"
   },
   "Logging": {
     "LogLevel": {
